simple serialization with metadata

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_definitions(-DLIGHT_FIELDS)
 set(CORE_SOURCE_FILES
         core/K2Tree.cpp
         core/PredicatesIndexCache.cpp
+        core/PredicatesIndexCacheBuilder.cpp
         core/serialization_util.cpp
         core/PredicatesCacheManager.cpp
         core/NaiveDynamicStringDictionary.cpp
